--- a/docs/css/site.css
+++ b/docs/css/site.css
@@ -422,119 +422,97 @@ button i {
 .services {
   padding: var(--spacing-layout-elements) 0;
   background: #F6F4EF; }
-
-.services-info {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: var(--spacing-layout-elements); }
-
-.services-info .media {
-  overflow: hidden; }
-
-.services-info .media,
-.services-info ul li {
-  border-radius: 0.5em; }
-
-.services-info .media img {
-  width: 100%;
-  display: block; }
-
-.services-info ul {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  grid-gap: var(--spacing-layout-elements);
-  padding-bottom: 0; }
-
-.services-info ul li {
-  list-style: none outside;
-  background: var(--color-body-background);
-  font-family: var(--font-headers);
-  text-transform: uppercase;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  transition: all 0.3s ease-in-out;
-  cursor: pointer; }
-
-.services-info ul li:hover {
-  background: var(--color-red-main);
-  color: var(--color-body-background); }
-
-.services-info ul li:hover i {
-  color: var(--color-body-background); }
-
-.services-info ul li h5 {
-  margin-bottom: 0; }
-
-.services-info ul li i {
-  font-size: 2em;
-  margin-bottom: 0.5em;
-  color: var(--color-beige-main); }
+  .services .services-info {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: var(--spacing-layout-elements); }
+    .services .services-info .media,
+    .services .services-info ul li {
+      border-radius: 0.5em; }
+    .services .services-info .media {
+      overflow: hidden; }
+      .services .services-info .media img {
+        width: 100%;
+        display: block; }
+    .services .services-info ul {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(2, 1fr);
+      grid-gap: var(--spacing-layout-elements);
+      padding-bottom: 0; }
+      .services .services-info ul li {
+        list-style: none outside;
+        background: var(--color-body-background);
+        font-family: var(--font-headers);
+        text-transform: uppercase;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        transition: all 0.3s ease-in-out;
+        cursor: pointer; }
+        .services .services-info ul li:hover {
+          background: var(--color-red-main);
+          color: var(--color-body-background); }
+          .services .services-info ul li:hover i {
+            color: var(--color-body-background); }
+        .services .services-info ul li i {
+          font-size: 2em;
+          margin-bottom: 0.5em;
+          color: var(--color-beige-main); }
+        .services .services-info ul li h5 {
+          margin-bottom: 0; }
 
 .team {
   padding: var(--spacing-layout-elements) 0; }
-
-.all-workers {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 3em; }
-
-.worker {
-  grid-column: span 1;
-  position: relative; }
-
-.worker .media {
-  width: 100%;
-  border-radius: 50%;
-  overflow: hidden;
-  transition: border-radius 0.3s ease-in-out;
-  cursor: pointer; }
-
-.worker .media:hover {
-  border-radius: 0; }
-
-.worker .media img {
-  display: block;
-  width: 100%;
-  height: auto; }
-
-.worker .worker-name {
-  margin-bottom: 0.2em; }
-
-.worker .worker-position {
-  color: var(--color-red-main);
-  padding-bottom: 0; }
+  .team .all-workers {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 3em; }
+    .team .all-workers .worker {
+      grid-column: span 1;
+      position: relative; }
+      .team .all-workers .worker .media {
+        width: 100%;
+        border-radius: 50%;
+        overflow: hidden;
+        transition: border-radius 0.3s ease-in-out;
+        cursor: pointer; }
+        .team .all-workers .worker .media:hover {
+          border-radius: 0; }
+        .team .all-workers .worker .media img {
+          display: block;
+          width: 100%;
+          height: auto; }
+      .team .all-workers .worker .worker-name {
+        margin-bottom: 0.2em; }
+      .team .all-workers .worker .worker-position {
+        color: var(--color-red-main);
+        padding-bottom: 0; }
 
 .testimonials {
   padding: var(--spacing-layout-elements) 0;
   background: #F6F4EF; }
-
-.testimonials .all-testimonials {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: var(--spacing-layout-elements); }
-
-.testimonials-card {
-  border: 1px solid var(--color-red-main);
-  border-radius: 0.5em;
-  overflow: hidden;
-  text-align: left;
-  background: var(--color-body-background); }
-
-.testimonials-card header {
-  width: 100%;
-  padding: 1.5em 2em;
-  border-bottom: 1px solid var(--color-red-main);
-  text-align: center;
-  background: var(--color-red-main);
-  color: var(--color-body-background); }
-
-.testimonials-card header .author {
-  margin-bottom: 0; }
-
-.testimonials-card .content {
-  padding: 1em 2em; }
+  .testimonials .all-testimonials {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: var(--spacing-layout-elements); }
+    .testimonials .all-testimonials .testimonials-card {
+      border: 1px solid var(--color-red-main);
+      border-radius: 0.5em;
+      overflow: hidden;
+      text-align: left;
+      background: var(--color-body-background); }
+      .testimonials .all-testimonials .testimonials-card header {
+        width: 100%;
+        padding: 1.5em 2em;
+        border-bottom: 1px solid var(--color-red-main);
+        text-align: center;
+        background: var(--color-red-main);
+        color: var(--color-body-background); }
+        .testimonials .all-testimonials .testimonials-card header .author {
+          margin-bottom: 0; }
+      .testimonials .all-testimonials .testimonials-card .content {
+        padding: 1em 2em; }
 
 form input:not([type="submit"]),
 form textarea {
